--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
 
-file(GLOB_RECURSE SOURCE main.cpp block.cpp util.cpp game.cpp)
+file(GLOB_RECURSE SOURCE main.cpp src/block.cpp src/util.cpp src/game.cpp)
 add_executable(Stack ${SOURCE})
