--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,4 +13,4 @@ init:
 - cmd: mklink %MINGW_DIR%\make.exe %MINGW_DIR%\mingw32-make.exe
 
 test_script:
-- cmake -G"MSYS Makefiles" . && make && echo "2" | stack.exe
+- cmake -G"MSYS Makefiles" . && make && echo "2" | stacker.exe
